--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Authentication - Email, Phone, Google, Facebook, Apple, GitHub and Fingerprint</string>
+    <string name="app_name">Authentication</string>
 </resources>
